--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-react-rethink-es6",
-  "description": "Node Express, React, RethinkDB, ES6 super basic boilerplate.",
-  "version": "0.0.1",
+  "description": "Node Express, React, RethinkDB, ES6 basic boilerplate.",
+  "version": "0.0.2",
   "homepage": "https://github.com/engvik/express-react-rethink-es6/",
   "author": {
     "name": "Lars Jansøn Engvik",
@@ -16,20 +16,26 @@
     "node": "0.12.7"
   },
   "dependencies": {
+    "babel": "5.8.23",
+    "babel-core": "5.8.23",
+    "babel-loader": "5.3.2",
     "body-parser": "1.13.2",
     "convict": "0.8.2",
+    "css-loader": "0.17.0",
     "express": "4.13.1",
+    "extract-text-webpack-plugin": "0.8.2",
+    "node-sass": "3.3.2",
     "react": "0.13.3",
     "rethinkdb": "2.0.2",
+    "sass-loader": "2.0.1",
+    "webpack": "1.12.1",
     "winston": "1.0.1"
   },
-  "devDependencies": {
-    "babel": "5.8.9",
-    "babelify": "6.1.3",
-    "browserify": "11.0.0",
-    "gulp": "3.9.0"
-  },
   "scripts": {
-    "start": "node dist/app.js"
+    "prestart": "webpack",
+    "start": "node app.js"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "1.10.1"
   }
 }
