--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "css-loader": "0.17.0",
     "express": "4.13.1",
     "extract-text-webpack-plugin": "0.8.2",
+    "mongoose": "4.1.9",
     "node-sass": "3.3.2",
     "react": "0.13.3",
     "sass-loader": "2.0.1",
